--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/
-JWT_SECRET=your_secret
+MONGO_URI=mongodb://localhost:27017/hexlertech
+JWT_SECRET= my_super_secret_key_123
+NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
