--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,9 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/hexlertech
-JWT_SECRET= my_super_secret_key_123
+JWT_SECRET=a_much_stronger_and_longer_secret_for_development_12345
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
+
+# JWT Expiration: 30 days
+JWT_EXPIRE=30d
+JWT_COOKIE_EXPIRE=30
